--- a/app/src/main/res/layout/fragment_about_course.xml
+++ b/app/src/main/res/layout/fragment_about_course.xml
@@ -39,10 +39,10 @@
             app:layout_constraintBottom_toBottomOf="parent"
             tools:targetApi="p" />
         <ImageView
-            android:id="@+id/add"
+            android:id="@+id/trash"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/add"
+            android:src="@drawable/trash"
             app:layout_constraintHorizontal_bias=".95"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
