--- a/app/src/main/res/navigation/my_navigation.xml
+++ b/app/src/main/res/navigation/my_navigation.xml
@@ -79,5 +79,14 @@
         android:id="@+id/groupAddFragment"
         android:name="com.abdurashidov.codial.fragments.GroupAddFragment"
         android:label="fragment_group_add"
-        tools:layout="@layout/fragment_group_add" />
+        tools:layout="@layout/fragment_group_add" >
+        <action
+            android:id="@+id/action_groupAddFragment_to_studentsFragment"
+            app:destination="@id/studentsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/studentsFragment"
+        android:name="com.abdurashidov.codial.fragments.StudentsFragment"
+        android:label="fragment_students"
+        tools:layout="@layout/fragment_students" />
 </navigation>
