--- a/app/src/main/res/layout/fragment_group_add.xml
+++ b/app/src/main/res/layout/fragment_group_add.xml
@@ -18,6 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/back"
+            android:padding="10dp"
             app:layout_constraintHorizontal_bias=".05"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
