--- a/app/src/main/res/layout/fragment_mentors_list.xml
+++ b/app/src/main/res/layout/fragment_mentors_list.xml
@@ -19,6 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/back"
+            android:padding="10dp"
             app:layout_constraintHorizontal_bias=".05"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -43,6 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/add"
+            android:padding="10dp"
             app:layout_constraintHorizontal_bias=".95"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
