--- a/app/src/main/res/layout/fragment_group_add.xml
+++ b/app/src/main/res/layout/fragment_group_add.xml
@@ -42,26 +42,17 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/surname_card"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+    <EditText
+        android:id="@+id/name"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="10dp"
-        android:layout_marginHorizontal="15dp"
-        app:helperText="Required*"
-        app:counterEnabled="true"
-        app:counterMaxLength="20"
-        app:helperTextTextColor="#E53935"
-        android:hint="Name"
-        app:layout_constraintTop_toBottomOf="@id/toolbar">
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:maxLength="20"
-            android:textSize="20sp"/>
-    </com.google.android.material.textfield.TextInputLayout>
+        android:layout_height="60dp"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginBottom="10dp"
+        android:padding="10dp"
+        android:background="@drawable/card_stroka"
+        android:layout_marginTop="20dp"
+        android:hint="Name"/>
 
     <Spinner
         android:id="@+id/mentor"
@@ -70,7 +61,7 @@
         android:layout_marginBottom="10dp"
         android:layout_marginHorizontal="15dp"
         android:paddingVertical="10dp"
-        app:layout_constraintTop_toBottomOf="@id/surname_card"/>
+        app:layout_constraintTop_toBottomOf="@id/name"/>
 
     <Spinner
         android:id="@+id/time"
