--- a/app/src/main/res/layout/fragment_students.xml
+++ b/app/src/main/res/layout/fragment_students.xml
@@ -14,7 +14,7 @@
         android:layout_height="65dp"
         android:background="#FFB800"
         android:layout_marginBottom="5dp"
-        app:layout_constraintBottom_toTopOf="@id/txt"
+        app:layout_constraintBottom_toTopOf="@id/result"
         app:layout_constraintTop_toTopOf="parent">
         <ImageView
             android:id="@+id/back"
@@ -55,10 +55,43 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
+        android:id="@+id/result"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/app_name"
+        android:textSize="20sp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginHorizontal="20dp"
+        android:textColor="@color/black"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintBottom_toTopOf="@id/start_lesson"
+        />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/start_lesson"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardElevation="4dp"
+        app:cardUseCompatPadding="true"
+        android:backgroundTint="#FFB800"
+        android:layout_marginHorizontal="40dp"
+        app:layout_constraintTop_toBottomOf="@id/result"
+        app:layout_constraintBottom_toTopOf="@id/txt">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Guruhga darsni boshlash"
+            android:textColor="#1A4E79"
+            android:paddingVertical="13dp"
+            android:textSize="16sp"
+            android:gravity="center_horizontal"/>
+    </androidx.cardview.widget.CardView>
+
+    <TextView
         android:id="@+id/txt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintTop_toBottomOf="@id/start_lesson"
         app:layout_constraintBottom_toTopOf="@id/my_rv"
         android:text="Barcha o'quvchilar ro'yhati"
         android:textStyle="bold"
