--- a/app/src/main/res/layout/group_edit_dialog.xml
+++ b/app/src/main/res/layout/group_edit_dialog.xml
@@ -8,7 +8,11 @@
     <EditText
         android:id="@+id/name"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginBottom="10dp"
+        android:padding="10dp"
+        android:background="@drawable/card_stroka"
+        android:layout_marginTop="20dp"
         android:hint="Kurs nomi"/>
 
     <Spinner
